# kg-lti

./: .gitignore  .gitignore.bak.2025-06-29_23:04:40  merge_ignore.sh
backend/: .env  .env.example  README.md  app.py  pyproject.toml
backend/templates/: lti-kg.xml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
frontend/src/components/: AttributeEditor.vue  EditorActions.vue  GraphViewer.vue  InfoDisplay.vue  SearchBox.vue  StudentActions.backup
