[project]
name = "graph"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pylti (>=0.7.0,<0.8.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
